# ProDBG

./: .gitignore  Cargo.toml  README.md  build.rs  tundra.lua  units.libs.lua  units.plugins.lua  units.prodbg.lua  units.tests.lua  units.tools.lua
api/include/: pd_common.h  pd_docking.h  pd_host.h  pd_readwrite.h  pd_ui.h  pd_view.h
api/rust/prodbg/: ui.rs
api/src/remote/: log.c  pd_binary_reader.c  pd_binary_writer.c  remote_api.c  remote_connection.c
data/: default_layout_2.json
data/mac/: appnib.xib
examples/crashing_native/: crash.c
examples/fake_6502/: fake6502_plugin.c
scripts/: mac_build_debug.sh  mac_build_release.sh  mac_clean.sh  uncrustify.cfg
src/: main.rs  plugin_handler.rs
src/addons/amiga_uae_debugger/: amiga_uae_debugger.c  amiga_uae_plugins.c  m68kdasm.c
src/addons/as_debugger/: asdbg_engine.cpp  asdbg_engine.h
src/addons/c64_vice_debugger/: c64_vice_connection.c  c64_vice_custom_regs.c  c64_vice_debugger.c
src/core/: Cargo.toml
src/core/src/: lib.rs  plugin_handler.rs
src/plugins/bitmap_memory/: Cargo.toml
src/plugins/breakpoints/: breakpoints_plugin.cpp
src/plugins/callstack/: callstack_plugin.cpp
src/plugins/console/: console_plugin.cpp
src/plugins/dbgeng/: dbgeng_plugin.cpp
src/plugins/disassembly/: disassembly_plugin.cpp
src/plugins/dummy_backend/: dummy_backend.c
src/plugins/hex_memory/: hex_memory_plugin.cpp
src/plugins/i3_docking/: i3_docking_plugin.c
src/plugins/i3wm_docking/: i3wm_docking_plugin.c
src/prodbg/: build.rs
src/ui/: Cargo.toml  build.rs
src/ui_testbench/: Cargo.toml
(+114 files in other folders)
