[package]
name = "prodbg_main"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]

# Call tundra to build all native code
build = "build.rs"

[[bin]]
name = "prodbg"

[dependencies]
libc = "0.2.0"
api_test = { path = "src/prodbg/tests/rust_api_test" }
bitmap_memory = { path = "src/plugins/bitmap_memory" }

